k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gestion-produits-dev
  labels:
    app.kubernetes.io/part-of: gestion-produits
    environment: dev
